code/k8s/gateway/grafana-home.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: gateway
spec:
  parentRefs:
    - name: home-gateway
      namespace: gateway
  hostnames:
    - "grafana.home"
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          namespace: observability
          port: 80
